--- a/.github/workflows/main-pipeline.yaml
+++ b/.github/workflows/main-pipeline.yaml
@@ -16,7 +16,7 @@ jobs:
 
       - name: Build Snap
         run: |
-          cd snap
+          cd my-ros-package/snap
           snapcraft
           ls
           # source /opt/ros/noetic/setup.bash
