Debbuging snap build

--- a/my-ros-package/snap/snapcraft.yaml
+++ b/my-ros-package/snap/snapcraft.yaml
@@ -10,7 +10,7 @@ grade: stable
 confinement: strict
 
 parts:
-  ros:
+  ros-dep:
     plugin: nil
     stage-packages:
       - ros-noetic-ros-base
