--- a/.github/workflows/main-pipeline.yaml
+++ b/.github/workflows/main-pipeline.yaml
@@ -24,17 +24,17 @@ jobs:
         shell: bash
         # working-directory: catkin_ws/
 
-  deploy:
-    runs-on: self-hosted
-    steps: 
-      - name: Install the snap
-        run: |
-          set -e
-          echo ${{ secrets.APP_PW }} sudo -S snap install --devmode app*.snap
-          isSnapPresent=$(snap list | awk '{print $1}' | grep "app")
-          if [ "$isSnapPresent" = "app" ];
-          then
-            echo "Snap is installed"
-          fi
-        shell: bash
+  # deploy:
+  #   runs-on: self-hosted
+  #   steps: 
+  #     - name: Install the snap
+  #       run: |
+  #         set -e
+  #         echo ${{ secrets.APP_PW }} sudo -S snap install --devmode app*.snap
+  #         isSnapPresent=$(snap list | awk '{print $1}' | grep "app")
+  #         if [ "$isSnapPresent" = "app" ];
+  #         then
+  #           echo "Snap is installed"
+  #         fi
+  #       shell: bash
   # verify:
