--- a/my-ros-package/snap/snapcraft.yaml
+++ b/my-ros-package/snap/snapcraft.yaml
@@ -10,32 +10,35 @@ grade: stable
 confinement: strict
 
 parts:
-  ros-dep:
-    plugin: nil
-    stage-packages:
-      - ros-noetic-ros-base
-      - ros-noetic-std-msgs
-      - ros-noetic-roscpp
-      - build-essential
-      - cmake
-      - python3-catkin-tools
+  # base:
+  #   plugin: nil
+  #   stage-packages:
+  #     - ros-noetic-ros-base
+  #     - ros-noetic-std-msgs
+  #     - ros-noetic-roscpp
 
-  my_ros_package:
-    plugin: nil
-    source: .
+
+  my-ros-package:
+    # after:
+    #   - base
+    plugin: catkin
+    source: src/
+    source-type: local
     build-packages:
       - g++
       - cmake
+      - build-essential
+      - python3-catkin-tools
     stage-packages:
       - ros-noetic-ros-base
       - ros-noetic-std-msgs
       - ros-noetic-roscpp
-    override-build: |
-      source /opt/ros/noetic/setup.bash
-      catkin_make
-      mkdir -p $SNAPCRAFT_PART_INSTALL/bin
-      cp devel/lib/my_ros_package/publisher_node $SNAPCRAFT_PART_INSTALL/bin/
-      cp devel/lib/my_ros_package/subscriber_node $SNAPCRAFT_PART_INSTALL/bin/
+    # override-build: |
+    #   source /opt/ros/noetic/setup.bash
+    #   catkin_make
+    #   mkdir -p $SNAPCRAFT_PART_INSTALL/bin
+    #   cp devel/lib/my_ros_package/publisher_node $SNAPCRAFT_PART_INSTALL/bin/
+    #   cp devel/lib/my_ros_package/subscriber_node $SNAPCRAFT_PART_INSTALL/bin/
 
 apps:
   publisher:
