--- a/.github/workflows/main-pipeline.yaml
+++ b/.github/workflows/main-pipeline.yaml
@@ -14,6 +14,15 @@ jobs:
         uses: actions/checkout@v3
         # working-directory: catkin_ws/src/
 
+      - name: Install snapcraft
+        run: |
+          sudo apt update
+          sudo apt install snapd -y
+          sudo snap install snapcraft --classic
+          systemctl status snapd
+
+        shell: bash
+
       - name: Build Snap
         run: |
           cd my-ros-package/snap
