--- a/.github/workflows/main-pipeline.yaml
+++ b/.github/workflows/main-pipeline.yaml
@@ -19,6 +19,7 @@ jobs:
           sudo apt update
           sudo apt install snapd -y
           sudo snap install snapcraft --classic
+          sudo snap install multipass
           systemctl status snapd
 
         shell: bash
