--- a/.github/workflows/main-pipeline.yaml
+++ b/.github/workflows/main-pipeline.yaml
@@ -20,6 +20,7 @@ jobs:
           sudo apt install snapd -y
           sudo snap install snapcraft --classic
           sudo snap install multipass
+          sudo usermod -aG multipass $USER
           systemctl status snapd
 
         shell: bash
