--- a/.github/workflows/main-pipeline.yaml
+++ b/.github/workflows/main-pipeline.yaml
@@ -8,20 +8,19 @@ on:
 jobs:
 
   build_snap:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
       - name: Checkout Repo Code
         uses: actions/checkout@v3
         # working-directory: catkin_ws/src/
 
-      - name: Install snapcraft
-        run: |
-          sudo apt update
-          sudo apt install snapd -y
-          sudo snap install snapcraft --classic
-          sudo snap install multipass
-          sudo usermod -aG multipass $USER
-          systemctl status snapd
+      # - name: Install snapcraft
+      #   run: |
+      #     sudo apt update
+      #     sudo apt install snapd -y
+      #     sudo snap install snapcraft --classic
+      #     sudo snap install multipass
+      #     systemctl status snapd
 
         shell: bash
 
