--- a/.github/workflows/main-pipeline.yaml
+++ b/.github/workflows/main-pipeline.yaml
@@ -22,7 +22,7 @@ jobs:
       #     sudo snap install multipass
       #     systemctl status snapd
 
-        shell: bash
+        # shell: bash
 
       - name: Build Snap
         run: |
