--- a/my-ros-package/snap/snapcraft.yaml
+++ b/my-ros-package/snap/snapcraft.yaml
@@ -28,17 +28,17 @@ parts:
       - g++
       - cmake
       - build-essential
-      - catkin-tools
+      # - catkin-tools
     stage-packages:
       - ros-noetic-ros-base
       - ros-noetic-std-msgs
       - ros-noetic-roscpp
-    # override-build: |
-    #   source /opt/ros/noetic/setup.bash
-    #   catkin_make
-    #   mkdir -p $SNAPCRAFT_PART_INSTALL/bin
-    #   cp devel/lib/my_ros_package/publisher_node $SNAPCRAFT_PART_INSTALL/bin/
-    #   cp devel/lib/my_ros_package/subscriber_node $SNAPCRAFT_PART_INSTALL/bin/
+    override-build: |
+      apt-get update
+      apt-get install -y software-properties-common curl
+      sh -c 'echo "deb http://packages.ros.org/ros/ubuntu focal main" > /etc/apt/sources.list.d/ros-latest.list'
+      curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | apt-key add -
+      snapcraftctl build
 
 apps:
   publisher:
