--- a/.github/workflows/main-pipeline.yaml
+++ b/.github/workflows/main-pipeline.yaml
@@ -26,7 +26,8 @@ jobs:
 
       - name: Build Snap
         run: |
-          cd my-ros-package/snap
+          export SNAPCRAFT_BUILD_ENVIRONMENT=lxd
+          cd simple-snap/src/snap
           snapcraft
           ls
           # source /opt/ros/noetic/setup.bash
