--- a/my-ros-package/snap/snapcraft.yaml
+++ b/my-ros-package/snap/snapcraft.yaml
@@ -34,7 +34,7 @@ parts:
       - ros-noetic-std-msgs
       - ros-noetic-roscpp
     override-build: |
-      apt-get update
+      # apt-get update
       apt-get install -y software-properties-common curl
       sh -c 'echo "deb http://packages.ros.org/ros/ubuntu focal main" > /etc/apt/sources.list.d/ros-latest.list'
       curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | apt-key add -
