--- a/simple-snap/src/snap/snapcraft.yaml
+++ b/simple-snap/src/snap/snapcraft.yaml
@@ -15,7 +15,7 @@ apps:
 parts:
   hello-snap:
     plugin: cmake
-    source: ./src
+    source: ..
     source-type: local
     build-packages:
       - g++
