--- a/simple-snap/src/snap/snapcraft.yaml
+++ b/simple-snap/src/snap/snapcraft.yaml
@@ -1,4 +1,4 @@
-name: hello-snap
+name: hello-world
 base: core20
 version: '0.1'
 summary: A simple Hello World snap
@@ -9,7 +9,7 @@ grade: devel
 confinement: strict
 
 apps:
-  hello-snap:
+  hello-world:
     command: hello-world
 
 parts:
