--- a/simple-snap/src/snap/snapcraft.yaml
+++ b/simple-snap/src/snap/snapcraft.yaml
@@ -20,3 +20,8 @@ parts:
     build-packages:
       - g++
       - cmake
+    override-build:
+      mkdir build && cd build
+      cmake ..
+      make
+      cp hello-snap $SNAPCRAFT_PART_INSTALL/bin/
