--- a/simple-snap/src/snapcraft.yaml
+++ b/simple-snap/src/snapcraft.yaml
@@ -17,6 +17,8 @@ parts:
     plugin: cmake
     source: .
     source-type: local
+    cmake-parameters:
+      - -DCMAKE_INSTALL_PREFIX=./install
     build-packages:
       - g++
       - cmake
