--- a/.github/workflows/main-pipeline.yaml
+++ b/.github/workflows/main-pipeline.yaml
@@ -28,7 +28,7 @@ jobs:
         run: |
           export SNAPCRAFT_BUILD_ENVIRONMENT=lxd
           ls
-          cd simple-snap/src/
+          cd ros-listener-talker/snap
           # snapcraft clean
           snapcraft
           ls
