--- a/.github/workflows/main-pipeline.yaml
+++ b/.github/workflows/main-pipeline.yaml
@@ -39,7 +39,7 @@ jobs:
       - name: Install the snap
         run: |
           set -e
-          echo ${{ secrets.APP_PW }} sudo -S snap install --devmode ros-talker-listener*.snap
+          echo ${{ secrets.APP_PW }} | sudo -S snap install --devmode ros-talker-listener*.snap
           isSnapPresent=$(snap list | awk '{print $1}' | grep "app")
           if [ "$isSnapPresent" = "ros-talker-listener" ];
           then
