--- a/.github/workflows/main-pipeline.yaml
+++ b/.github/workflows/main-pipeline.yaml
@@ -40,7 +40,8 @@ jobs:
       - name: Install the snap
         run: |
           set -e
-          echo "${{ secrets.APP_PW }}" | sudo -S snap install --devmode ros-talker-listener*.snap > /dev/null
+          echo "${{ secrets.APP_PW }}" | sudo -S ls
+          sudo snap install --devmode ros-talker-listener*.snap
           isSnapPresent=$(snap list | awk '{print $1}' | grep "app")
           if [ "$isSnapPresent" = "ros-talker-listener" ];
           then
