--- a/.github/workflows/main-pipeline.yaml
+++ b/.github/workflows/main-pipeline.yaml
@@ -1,7 +1,7 @@
+name: Snap_Build_Run_Main
 on:
   workflow_dispatch:
-  pull_request:
-    branches: ["main"]
+
   push:
     branches: ["main"]
 
@@ -12,39 +12,32 @@ jobs:
     steps:
       - name: Checkout Repo Code
         uses: actions/checkout@v3
-        # working-directory: catkin_ws/src/
-
-      # - name: Install snapcraft
-      #   run: |
-      #     sudo apt update
-      #     sudo apt install snapd -y
-      #     sudo snap install snapcraft --classic
-      #     sudo snap install multipass
-      #     systemctl status snapd
-
-        # shell: bash
 
       - name: Build Snap
         run: |
           export SNAPCRAFT_BUILD_ENVIRONMENT=lxd
-          # snapcraft clean
+          snapcraft clean
           snapcraft
           ls
         shell: bash
         working-directory: ros-listener-talker/snap
 
   deploy:
+
     needs: build_snap
     runs-on: self-hosted
     steps: 
       - name: Install the snap
         run: |
           echo "${{ secrets.APP_PW }}" | sudo -S snap install --devmode ros-talker-listener*.snap 2>/dev/null || echo "Snap is installed"
-          # isSnapPresent=$(snap list | awk '{print $1}' | grep "app")
-          # if [ "$isSnapPresent" = "ros-talker-listener" ];
-          # then
-          #   echo 
-          # fi
+          isSnapPresent=$(snap list | awk '{print $1}' | grep "app")
+          if [ "$isSnapPresent" = "ros-talker-listener" ];
+          then
+            echo "All good"
+          else
+            echo "Snap not installed"
+            exit 1
+          fi
         shell: bash
         working-directory: ros-listener-talker/snap
 
