--- a/.github/workflows/pr-pipeline.yaml
+++ b/.github/workflows/pr-pipeline.yaml
@@ -31,7 +31,6 @@ jobs:
 
   get_pr_no:
     if: github.event.issue.pull_request && contains(github.event.comment.body,'/deploy')
-    needs: build_snap
     runs-on: self-hosted
     outputs:
       PR_NUMBER: ${{ steps.pr.outputs.result }}
@@ -65,6 +64,11 @@ jobs:
               pull_number: number,
             });
             return pr.data.number
+
+      - name: Checkout Repo Code
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ steps.sha.outputs.result}}
 
   deploy:
     needs: get_pr_no
