--- a/.github/workflows/pr-pipeline.yaml
+++ b/.github/workflows/pr-pipeline.yaml
@@ -132,7 +132,7 @@ jobs:
           script: |
             const name = 'Deployment in runner';
             const success = '${{ job.status }}' === 'success';
-            const body = '${name}: ${success ? 'succeeded' :white_check_mark: : 'failed' :x:}'
+            const body = '${name}: ${success ? 'succeeded'✅ : 'failed'❌}'
 
       - name: Update comment
         uses: peter-evans/create-or-update-comment@v4
