--- a/.github/workflows/pr-pipeline.yaml
+++ b/.github/workflows/pr-pipeline.yaml
@@ -141,8 +141,8 @@ jobs:
         if: success() || failure()
         with:
           comment-id: ${{github.event.comment.id}}
-          issue-number: ${{ needs.get-pr-no.outputs.PR_NUMBER }}
+          issue-number: ${{ needs.get_pr_no.outputs.PR_NUMBER }}
           body: |
             ${{ steps.comment.outputs.result}}
-            'Check logs at ${{github.server_url}}/${{ github.repository }}/actions/runs/${{ github.run_id}}'
+            ${{github.server_url}}/${{ github.repository }}/actions/runs/${{ github.run_id}}
           edit-mode: replace
