--- a/.github/workflows/pr-pipeline.yaml
+++ b/.github/workflows/pr-pipeline.yaml
@@ -82,6 +82,10 @@ jobs:
   deploy:
     needs: get_pr_no
     runs-on: self-hosted
+    permissions:
+      contents: read
+      pull-requests: write
+      issues: write
     steps:
 
       - name: Install the snap
